@@ -4,46 +4,48 @@ SUBDIRS = util
 
 # Notes:
 # GeometryComponentFilter.h needed by Polygonizer.h
+# LineSegment.h needed by buffer/OffsetCurveBuilder.h needed by BufferOp.h 
+# Location.h needed by PointLocator.h for inlines
 
 geosdir = $(includedir)/geos/geom
 
-geos_HEADERS = \
-	BinaryOp.h	\
-	Coordinate.h	\
-	Coordinate.inl	\
-	CoordinateArraySequence.h	\
+geos_HEADERS = 					\
+	BinaryOp.h				\
+	Coordinate.h				\
+	Coordinate.inl				\
+	CoordinateArraySequence.h		\
 	CoordinateArraySequenceFactory.h	\
 	CoordinateArraySequenceFactory.inl	\
-	CoordinateFilter.h	\
-	CoordinateSequence.h	\
-	CoordinateSequenceFactory.h	\
-	Dimension.h	\
-	Envelope.h	\
-	Envelope.inl	\
-	Geometry.h	\
-	Geometry.inl	\
-	GeometryList.h	\
-	GeometryCollection.h	\
-	GeometryCollection.inl	\
-	GeometryComponentFilter.h	\
-	GeometryFactory.h	\
-	GeometryFactory.inl	\
-	GeometryFilter.h	\
-	IntersectionMatrix.h	\
-	LineSegment.h	\
-	LineSegment.inl	\
-	LineString.h	\
-	LinearRing.h	\
-	Location.h	\
-	MultiLineString.h	\
-	MultiLineString.inl	\
-	MultiPoint.h	\
-	MultiPolygon.h	\
-	MultiPolygon.inl	\
-	Point.h	\
-	Polygon.h	\
-	PrecisionModel.h	\
-	PrecisionModel.inl	\
-	Triangle.h
+	CoordinateFilter.h			\
+	CoordinateSequence.h			\
+	CoordinateSequenceFactory.h		\
+	Dimension.h				\
+	Envelope.h				\
+	Envelope.inl				\
+	Geometry.h				\
+	Geometry.inl				\
+	GeometryList.h				\
+	GeometryCollection.h			\
+	GeometryCollection.inl			\
+	GeometryComponentFilter.h		\
+	GeometryFactory.h			\
+	GeometryFactory.inl			\
+	GeometryFilter.h			\
+	IntersectionMatrix.h			\
+	LineSegment.h				\
+	LineSegment.inl				\
+	LineString.h				\
+	LinearRing.h				\
+	Location.h				\
+	MultiLineString.h			\
+	MultiLineString.inl			\
+	MultiPoint.h				\
+	MultiPolygon.h				\
+	MultiPolygon.inl			\
+	Point.h					\
+	Polygon.h				\
+	PrecisionModel.h			\
+	PrecisionModel.inl	
 
-#noinst_HEADERS = 
+noinst_HEADERS = 		\
+	Triangle.h
